--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,7 +115,7 @@ nav[aria-label="pagination-heading"], nav.menu--adverts-secondary-menu {
 }
 
 div.site-footer__bottom {
-  background: url("../images/city.svg");
+  background: url("../images/city.svg") no-repeat;
 }
 
 div#toolbar-administration > nav#toolbar-bar {
