--- a/templates/node--advert--full.html.twig
+++ b/templates/node--advert--full.html.twig
@@ -112,13 +112,17 @@
             <div><strong>{{ content.field_visit_email_address1|field_label }}:</strong> {{ content.field_visit_email_address1|field_value }}</div>
           </div>
           <div class="col-md-6">
-            <div><strong>{{ content.field_visit_cellphone_2|field_label }}:</strong> {{ content.field_visit_cellphone_2|field_value }}</div>
-            <div><strong>{{ content.field_visit_email_address2|field_label }}:</strong> {{ content.field_visit_email_address2|field_value }}</div>
+            {% if node.field_visit_cellphone_2.value %}
+              <div><strong>{{ content.field_visit_cellphone_2|field_label }}:</strong> {{ content.field_visit_cellphone_2|field_value }}</div>
+            {% endif %}
+            {% if node.field_visit_email_address2.value %}
+              <div><strong>{{ content.field_visit_email_address2|field_label }}:</strong> {{ content.field_visit_email_address2|field_value }}</div>
+            {% endif %}
           </div>
         </div>
       </div>
     </div>
-    {% if content.field_advert_location is not empty %}
+    {% if node.field_advert_location.value %}
       <div class="d-flex justify-content-between mt-2 p-2 bg-light">
         <button type="button" class="btn btn-primary btn-sm text-white" data-bs-toggle="modal" data-bs-target="#advertLocationMap"><i class="fas fa-map-marked-alt"></i> View map</button>
         {{ content.addtoany }}
