--- a/templates/page-title.html.twig
+++ b/templates/page-title.html.twig
@@ -20,6 +20,6 @@
     {% if rented_sold %}
         <h2{{ title_attributes.addClass('page-header') }}><span class="label label-danger" style="vertical-align: middle; font-size: 50%">{{ rented_sold }}</span> {{ title }}</h2>
     {% else %}
-        <h2{{ title_attributes.addClass('page-header') }}>{{ title }}</h2>
+        <h2{{ title_attributes.addClass('page-header text-center') }}>{{ title }}</h2>
     {% endif %}
 {% endif %}
