--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -74,7 +74,7 @@
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
           <nav{{ navbar_top_attributes.addClass('bg-white') }}>
             <div class="container">
-              <div class="d-flex w-100">
+              <div class="d-flex w-100 justify-content-between">
                 <div class="logo-region">{{ page.top_header }}</div>
                 <div class="header-right-region">{{ page.top_header_form }}</div>
               </div>
@@ -88,7 +88,7 @@
               <button class="navbar-toggler collapsed" type="button" data-bs-toggle="{{ navbar_collapse_btn_data }}" data-bs-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="{{ navbar_collapse_class ~ ' justify-content-md-start' }}" id="CollapsingNavbar">
                 <div class="row w-100 g-0">
-                  <div class="col-md-8 col-sm-12">{{ page.primary_menu }}</div>
+                  <div class="col-md-8 col-sm-12 mt-2">{{ page.primary_menu }}</div>
                   <div class="col-md-4 col-sm-12">
                     {{ page.header_form }}
                   </div>
