--- a/templates/node--advert--tiny.html.twig
+++ b/templates/node--advert--tiny.html.twig
@@ -84,7 +84,7 @@
           <small class="text-muted">Ref: {{ content.field_advert_reference|field_value }}</small>
         </div>
         <div>
-          <i class="fas fa-map-marker-alt"></i> {{ node.location_province.value }}, {{ node.location_district.value }}
+          <i class="fas fa-map-marker-alt"></i> {{ node.field_advert_locality_province.value }}, {{ node.field_advert_locality_district.value }}
         </div>
         <div>{{ content.property_type_pill }} <span
             class="badge bg-success">{{ content.field_advert_type|field_value }}</span> | {{ content.price_pill }}</div>
