--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -182,9 +182,9 @@
               <div class="container">
                 <div class="site-footer__top clearfix">
                   <div class="row">
-                    <div class="col-md-4">{{ page.footer_first }}</div>
-                    <div class="col-md-4">{{ page.footer_second }}</div>
-                    <div class="col-md-4">{{ page.footer_third }}</div>
+                    <div class="col-md-4 mb-3 mb-md-0">{{ page.footer_first }}</div>
+                    <div class="col-md-4 mb-3 mb-md-0">{{ page.footer_second }}</div>
+                    <div class="col-md-4 mb-0">{{ page.footer_third }}</div>
                   </div>
                 </div>
               </div>
