--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -69,37 +69,35 @@
 #}
 <div id="page-wrapper">
   <div id="page">
-    <header id="header" class="header fixed-top" role="banner" aria-label="{{ 'Site header'|t}}">
+    <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
-          <nav{{ navbar_top_attributes.addClass('bg-white') }}>
-            <div class="container">
-              <div class="d-flex w-100 justify-content-between py-2">
+          <nav{{ navbar_attributes.addClass('fixed-top d-flex flex-column p-0') }}>
+            <div class="hir-header-navbar container-fluid bg-white">
+              <div class="container d-flex py-2">
                 <div class="logo-region">{{ page.top_header }}</div>
                 <div class="header-right-region">{{ page.top_header_form }}</div>
               </div>
             </div>
-          </nav>
-        {% endif %}
-        <nav{{ navbar_attributes }}>
-          <div class="container">
-            {{ page.header }}
-            {% if page.primary_menu or page.header_form %}
-              <button class="navbar-toggler collapsed" type="button" data-bs-toggle="{{ navbar_collapse_btn_data }}" data-bs-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-              <div class="{{ navbar_collapse_class ~ ' justify-content-md-start' }}" id="CollapsingNavbar">
-                <div class="row w-100 g-0">
-                  <div class="col-md-8 col-sm-12 my-2 my-sm-0">{{ page.primary_menu }}</div>
-                  <div class="col-md-4 col-sm-12">
-                    {{ page.header_form }}
+            <div class="container-fluid py-2">
+              <div class="container">
+                {{ page.header }}
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="{{ navbar_collapse_btn_data }}" data-bs-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="{{ navbar_collapse_class ~ ' justify-content-md-start' }}" id="CollapsingNavbar">
+                  <div class="row w-100 g-0">
+                    <div class="col-md-8 col-sm-12 my-2 my-sm-0">{{ page.primary_menu }}</div>
+                    <div class="col-md-4 col-sm-12">
+                      {{ page.header_form }}
+                    </div>
                   </div>
                 </div>
-	          </div>
-            {% endif %}
-            {% if sidebar_collapse %}
-              <button class="navbar-toggler navbar-toggler-left collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#CollapsingLeft" aria-controls="CollapsingLeft" aria-expanded="false" aria-label="Toggle navigation"></button>
-            {% endif %}
-          </div>
-        </nav>
+                {% if sidebar_collapse %}
+                  <button class="navbar-toggler navbar-toggler-left collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#CollapsingLeft" aria-controls="CollapsingLeft" aria-expanded="false" aria-label="Toggle navigation"></button>
+                {% endif %}
+              </div>
+            </div>
+          </nav>
+        {% endif %}
       {% endblock %}
     </header>
     <div class="grand-wrapper">
