--- a/templates/node--agent--teaser.html.twig
+++ b/templates/node--agent--teaser.html.twig
@@ -77,10 +77,11 @@
 <article{{ attributes.addClass(classes) }}>
   <div{{ content_attributes.addClass(cardClasses) }}>
     <img src="{{ image_uri }}" class="card-img-top" alt="{{ node.title.value }}">
-    <div class="card-body text-center">
+    <div class="card-body text-center pb-1">
       <h6 class="m-0"><a href="{{ url }}">{{ label }}</a></h6>
+      <div class="small"><i class="fas fa-map-marker-alt"></i> {{ node.field_agent_operations_area.value }}</div>
     </div>
-    <div class="card-footer bg-success text-white border-0 p-2">
+    <div class="card-footer bg-success text-white border-0 p-2 rounded">
       <div class="small text-center"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
       <div class="small d-flex flex-nowrap overflow-hidden align-items-baseline justify-content-center"><i class="fas fa-at"></i> <span class="ps-1">{{ node.field_agent_email.value }}</span></div>
     </div>
