--- a/templates/node--agent--teaser.html.twig
+++ b/templates/node--agent--teaser.html.twig
@@ -83,7 +83,7 @@
     </div>
     <div class="card-footer bg-success text-white border-0 p-2 rounded">
       <div class="small text-center"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
-      <div class="small d-flex flex-nowrap overflow-hidden align-items-baseline justify-content-center"><i class="fas fa-at"></i> <span class="ps-1">{{ node.field_agent_email.value }}</span></div>
+      <div class="small d-flex overflow-hidden align-items-baseline justify-content-center"><i class="fas fa-at"></i> <span class="ps-1">{{ node.field_agent_email.value }}</span></div>
     </div>
   </div>
 </article>
