--- a/templates/node--agent--teaser.html.twig
+++ b/templates/node--agent--teaser.html.twig
@@ -63,7 +63,7 @@
 
 {%
   set classes = [
-    'node', 'border-0',
+    'node', 'border-0', 'p-0', 'm-0',
     'node--type-' ~ node.bundle|clean_class,
     not node.isPublished() ? 'node--unpublished',
     view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
