--- a/templates/node--agent--full.html.twig
+++ b/templates/node--agent--full.html.twig
@@ -84,7 +84,7 @@
       <div class="flex-md-grow-1 ms-0 ms-md-2">
         <h4>{{ node.title.value }}</h4>
         <dl class="row">
-          <dt class="col-4-md-4">{{ content.field_advertiser_type|field_label }}</dt>
+          <dt class="col-4 col-md-4">{{ content.field_advertiser_type|field_label }}</dt>
           <dd class="col-8 col-md-8 m-0">{{ content.field_advertiser_type|field_value }}</dd>
 
           <dt class="col-4 col-md-4">{{ content.field_agent_rating|field_label }}</dt>
