--- a/templates/node--agent--full.html.twig
+++ b/templates/node--agent--full.html.twig
@@ -95,6 +95,9 @@
 
           <dt class="col-4 col-md-4">{{ content.field_agent_email|field_label }}</dt>
           <dd class="col-8 col-md-8 m-0">{{ content.field_agent_email|field_value }}</dd>
+
+          <dt class="col-4 col-md-4">{{ content.field_agent_phone|field_label }}</dt>
+          <dd class="col-8 col-md-8 m-0">{{ content.field_agent_phone|field_value }}</dd>
         </dl>
         <div class="d-flex justify-content-between">
           <div class="agent-website">
