--- a/templates/addtoany-standard.html.twig
+++ b/templates/addtoany-standard.html.twig
@@ -16,34 +16,12 @@
  */
 #}
 {# Remove whitespace between tags for even spacing between buttons. #}
-{% spaceless %}
-
-  {% if button_setting != 'none' %}
-    {% set universal_button %}
-      <a class="a2a_dd addtoany_share"
-         href="https://www.addtoany.com/share#url={{ link_url|url_encode }}&amp;title={{ link_title|url_encode }}">
-        {% if button_image %}
-          <img src="{{ button_image }}" alt="{{ link_title }}">
-        {% endif %}
-      </a>
-    {% endset %}
-  {% endif %}
-  <div>
-    <strong>Share: </strong>
-    <span class="a2a_kit a2a_kit_size_{{ buttons_size }} addtoany_list" data-a2a-url="{{ link_url }}"
-          data-a2a-title="{{ link_title }}">
-        {% if universal_button_placement == 'before' %}
-          {{ universal_button }}
-        {% endif %}
-
-      {% if addtoany_html %}
-        {{ addtoany_html|raw }}
-      {% endif %}
-
-      {% if universal_button_placement == 'after' %}
-        {{ universal_button }}
-      {% endif %}
+<div class="social-media-links">
+  <strong>Share: </strong>
+{#  <span class="a2a_kit a2a_kit_size_{{ buttons_size }} addtoany_list" data-a2a-url="{{ link_url }}" data-a2a-title="{{ link_title }}">#}
+  <span class="a2a_kit addtoany_list" data-a2a-url="{{ link_url }}" data-a2a-title="{{ link_title }}">
+    {% if addtoany_html %}
+      {{ addtoany_html|raw }}
+    {% endif %}
   </span>
-  </div>
-
-{% endspaceless %}
+</div>
