--- a/templates/node--advert--full.html.twig
+++ b/templates/node--advert--full.html.twig
@@ -130,7 +130,7 @@
       </div>
     </div>
     {% if node.field_advert_location.value %}
-      <div class="d-flex justify-content-between mt-2 p-2 bg-light">
+      <div class="d-flex justify-content-between my-2 p-2 bg-light rounded">
         <button type="button" class="btn btn-primary btn-sm text-white" data-bs-toggle="modal" data-bs-target="#advertLocationMap"><i class="fas fa-map-marked-alt"></i> View map</button>
         {{ content.addtoany }}
       </div>
