--- a/templates/node--agent--full.html.twig
+++ b/templates/node--agent--full.html.twig
@@ -82,7 +82,7 @@
         <img src="{{ logo_uri }}" alt="{{ node.title.value }}">
       </div>
       <div class="flex-md-grow-1 ms-0 ms-md-2">
-        <h4>{{ node.title.value }}</h4>
+        <h4 class="text-center text-md-start">{{ node.title.value }}</h4>
         <dl class="row">
           <dt class="col-4 col-md-4">{{ content.field_advertiser_type|field_label }}</dt>
           <dd class="col-8 col-md-8 m-0">{{ content.field_advertiser_type|field_value }}</dd>
