--- a/templates/node--agent--teaser.html.twig
+++ b/templates/node--agent--teaser.html.twig
@@ -71,7 +71,7 @@
   ]
 %}
 {% set cardClasses = [
-  'node__content', 'clearfix', 'card', 'border-success', 'p-1', 'shadow-sm'
+  'node__content', 'clearfix', 'card', 'border-warning', 'p-1', 'shadow-sm'
 ] %}
 {% set image_uri = attribute(content.field_agent_logo[0], '#markup') %}
 <article{{ attributes.addClass(classes) }}>
