--- a/templates/node--advert--full.html.twig
+++ b/templates/node--advert--full.html.twig
@@ -70,6 +70,7 @@
 ] %}
 {% set price = attribute(content.field_advert_price.0, '#markup') %}
 {% set negotiable = node.field_advert_price_negociable.value == '1' %}
+{% set publisher = attribute(content.field_advert_advertiser.0, '#options').entity %}
 <article{{ attributes.addClass(classes) }}>
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
     {{ content.field_advert_picture }}
@@ -129,6 +130,35 @@
         </div>
       </div>
     </div>
+    {% if publisher %}
+      <div class="card border-light mt-2">
+        <div class="card-header border-light">
+          <h4 class="card-title m-0 text-secondary">{{ 'Advertiser agent' }}</h4>
+        </div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-2">
+              {% set logo_uri = publisher.field_agent_logo.entity.fileuri %}
+              {% if logo_uri %}
+                {{ drupal_image(logo_uri, 'thumbnail', {alt: publisher.title.value, title: publisher.title.value}) }}
+              {% else %}
+                <img src="{{ 'public://default_images/unknown.jpg'|image_style('thumbnail') }}" alt="{{ publisher.title.value }}">
+              {% endif %}
+            </div>
+            <div class="col-md-5">
+                <div><strong>{{ 'Name' }}:</strong> {{ publisher.title.value }}</div>
+                <div><strong>{{ 'Phone number' }}:</strong> {{ publisher.field_agent_phone.value }}</div>
+                <div><strong>{{ 'Location of interest' }}:</strong> {{ publisher.field_agent_operations_area.value }}</div>
+            </div>
+            <div class="col-md-5">
+              <div><strong>{{ 'District' }}:</strong> {{ publisher.field_agent_district.entity.name.value }}</div>
+              <div><strong>{{ 'Sector' }}:</strong> {{ publisher.field_agent_sector.value }}</div>
+              <div><strong>{{ 'Street' }}:</strong> {{ publisher.field_agent_street.value }}</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endif %}
     {% if node.field_advert_location.value %}
       <div class="d-flex justify-content-between my-2 p-2 bg-light rounded">
         <button type="button" class="btn btn-primary btn-sm text-white" data-bs-toggle="modal" data-bs-target="#advertLocationMap"><i class="fas fa-map-marked-alt"></i> View map</button>
