--- a/templates/node--advert--full.html.twig
+++ b/templates/node--advert--full.html.twig
@@ -139,14 +139,16 @@
           <div class="row">
             <div class="col-md-2">
               {% set logo_uri = publisher.field_agent_logo.entity.fileuri %}
-              {% if logo_uri %}
-                {{ drupal_image(logo_uri, 'thumbnail', {alt: publisher.title.value, title: publisher.title.value}) }}
-              {% else %}
-                <img src="{{ 'public://default_images/unknown.jpg'|image_style('thumbnail') }}" alt="{{ publisher.title.value }}">
-              {% endif %}
+              <a href="{{ drupal_url('node/' ~ publisher.nid.value) }}">
+                {% if logo_uri %}
+                  {{ drupal_image(logo_uri, 'thumbnail', {alt: publisher.title.value, title: publisher.title.value}) }}
+                {% else %}
+                  <img src="{{ 'public://default_images/unknown.jpg'|image_style('thumbnail') }}" alt="{{ publisher.title.value }}">
+                {% endif %}
+              </a>
             </div>
             <div class="col-md-5">
-                <div><strong>{{ 'Name' }}:</strong> {{ publisher.title.value }}</div>
+                <div><strong>{{ 'Name' }}:</strong> <a href="{{ drupal_url('node/' ~ publisher.nid.value) }}">{{ publisher.title.value }}</a></div>
                 <div><strong>{{ 'Phone number' }}:</strong> {{ publisher.field_agent_phone.value }}</div>
                 <div><strong>{{ 'Location of interest' }}:</strong> {{ publisher.field_agent_operations_area.value }}</div>
             </div>
