--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -26,3 +26,4 @@
     <i class="fa fa-youtube fa-2x" aria-hidden="true" style="color: #FF0100; margin-left: 3px; margin-right: 3px;"></i>
   </a>
 {% endif %}
+<img src="https://www.google-analytics.com/collect?v=1&tid=UA-107151364-1&t=event&ec=email&ea=open"/>
