--- a/emails/hir-campaign-adverts.html.twig
+++ b/emails/hir-campaign-adverts.html.twig
@@ -5,7 +5,7 @@
     <table class="tg">
         <tr>
             <td class="tg-0pky" colspan="2">
-                <img src="{{ protocol ~ 'public://default_images/email_banner.gif'|image_style('email_banner') }}"
+                <img src="{{ 'https://jirbucket.s3.eu-central-1.amazonaws.com/banners/HiR/Brand+Awareness/HiR_System_Email_Top_Banner.gif'|image_style('email_banner') }}"
                      class="templateImage" alt="email_banner">
             </td>
         </tr>
